feat:完善评论点赞回复功能

--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -4,6 +4,7 @@
 /* @import "app.css"; 你的项目css */
 @import "colorui/main.wxss";
 @import "colorui/icon.wxss";
+@import "./style/bankComment.wxss";
 page {
   height: 100%;
   background-color: #FABF01;
