--- a/miniprogram/pages/home/examWritten/examWritten.wxml
+++ b/miniprogram/pages/home/examWritten/examWritten.wxml
@@ -17,7 +17,7 @@
 <block wx:if="{{item.type === '单选'}}">
   <view class="radio-question" >
     <view class="quetion-title">
-      <text>{{item.id}}. {{item.title}}【单选】
+      <text>{{item.id}}. {{item.title}}<text class="text-yellow">【单选】</text>
       </text>
     </view>
     <radio-group data-type="{{item.type}}" id="{{item.id}}" bindchange="radioChange" class="radio-group" >
@@ -32,7 +32,7 @@
 <block wx:elif="{{item.type === '多选'}}">
   <view class="checkbox-question" >
     <view class="quetion-title">
-      <text>{{item.id}}. {{item.title}}【多选】</text>
+      <text>{{item.id}}. {{item.title}}<text class="text-yellow">【多选】</text></text>
     </view>
     <checkbox-group data-type="{{item.type}}" id="{{item.id}}" bindchange="checkboxChange" class="checkbox-group" >
         <label class="my-choosebox" wx:for="{{item.options}}" wx:key="key" wx:for-index="key"  wx:for-item="value" >
@@ -47,7 +47,7 @@
 <block wx:elif="{{item.type === '不定项选'}}">
   <view class="checkbox-question" >
     <view class="quetion-title">
-      <text>{{item.id}}. {{item.title}}【不定项选】</text>
+      <text>{{item.id}}. {{item.title}}<text class="text-yellow">【不定项选】</text></text>
     </view>
     <checkbox-group  bindchange="checkboxChange" data-type="{{item.type}}" id="{{item.id}}" class="checkbox-group" >
         <label class="my-choosebox" wx:for="{{item.options}}" wx:key="key" wx:for-index="key"  wx:for-item="value">
@@ -61,7 +61,7 @@
 <block wx:elif="{{item.type === '判断'}}">
   <view class="radio-question" >
     <view class="quetion-title">
-      <text>{{item.id}}. {{item.title}}【判断】</text>
+      <text>{{item.id}}. {{item.title}}<text class="text-yellow">【判断】</text></text>
     </view>
     <radio-group class="radio-group" data-type="{{item.type}}" id="{{item.id}}" bindchange="radioChange" >
         <label class="my-choosebox" wx:for="{{item.options}}" wx:key="key" wx:for-index="key"  wx:for-item="value">
@@ -75,7 +75,7 @@
 <block wx:elif="{{item.type === '填空'}}">
   <view class="blank-question" >
     <view class="quetion-title">
-      <text>{{item.id}}. {{item.title}}【填空】</text>
+      <text>{{item.id}}. {{item.title}}<text class="text-yellow">【填空】</text></text>
     </view>
     <view bindtap="handleTap" data-type="{{item.type}}" id="{{item.id}}" wx:for="{{item.correct_answer}}" wx:key="key" wx:for-index="key"  wx:for-item="value">
    <input data-index="{{key}}"  bindinput="inputChange" placeholder="[填空{{key + 1}}]"></input>
@@ -85,7 +85,7 @@
 <block wx:elif="{{item.type === '排序'}}">
   <view class="sort-question" >
     <view class="quetion-title">
-      <text>{{item.id}}. {{item.title}}【排序】</text>
+      <text>{{item.id}}. {{item.title}}<text class="text-yellow">【排序】</text></text>
     </view>
     <view wx:for="{{item.options}}" wx:key="key" wx:for-index="key"  wx:for-item="value">
       <block wx:if="{{value != ''}}">
@@ -115,7 +115,7 @@
     <block wx:if="{{emptyQuestions.length > 0}}">
       <text>你还有题目未完成
       （{{emptyStr}}）
-        是否确认提交？
+        是否确认提交
       </text>
     </block>
     <block wx:else>
