--- a/miniprogram/pages/center/viewReplay/viewReplay.wxml
+++ b/miniprogram/pages/center/viewReplay/viewReplay.wxml
@@ -1,7 +1,7 @@
 <!--miniprogram/pages/center/viewReplay/viewReplay.wxml-->
 <cu-custom bgColor="bg-yellow" isBack="{{true}}">
 	<view slot="content"></view>
-	<block wx:if="{{type === 'replay'}}">
+	<block wx:if="{{type === 'reply'}}">
 		<view slot="backText">收到回复</view>
 	</block>
 	<block wx:elif="{{type === 'appre'}}">
@@ -12,41 +12,56 @@
 	</block>
 </cu-custom>
 <view class="wrap">
-	<block wx:if="{{type === 'replay'}}">
-		<view class="item">
-			<view class="avatar">
-				<image src="../../../images/icon/people.png"></image>
-			</view>
-			<view class="content">
-				<view class="user">
-					<text class="user-name">马克西姆11111111111111</text>
-					<text class="replay">回复了你的评论</text>
-				</view>
-				<view class="time">
-					<text>04-30</text>
-				</view>
-			</view>
-			<view class="dot">
-				<text class="cuIcon-title text-yellow"></text>
+	<block wx:if="{{type === 'reply'}}">
+		<block wx:for="{{replyList}}" wx:key="index">
+					<view class="item" id="{{item.replyId}}" data-index="{{item.questionIndex}}" data-commentid="{{item.commentId}}" bindtap="handleViewComment">
+						<view class="avatar">
+							<image src="{{item.avatar}}"></image>
+						</view>
+						<view class="content">
+							<view class="user">
+								<text class="user-name">{{item.user_name}}</text>
+								<text class="replay">回复了你的评论</text>
+							</view>
+							<view class="time">
+								<text>{{item.create_time}}</text>
+							</view>
+						</view>
+						<view class="dot" wx:if="{{!item.ifView}}">
+							<text class="cuIcon-title text-yellow"></text>
+						</view>
+					</view>
+		</block>
+		<view wx:if="{{commentList.length === 0}}">
+			<view class="item">
+				<text class="no-msg">暂时没有收到评论哦</text>
 			</view>
 		</view>
+
 	</block>
 	<block wx:elif="{{type === 'appre'}}">
-		<view class="item">
-			<view class="avatar">
-				<image src="../../../images/icon/people.png"></image>
-			</view>
-			<view class="content">
-				<view class="user">
-					<text class="user-name">马克西姆11111111111111</text>
-					<text class="replay">点赞了你的评论</text>
-				</view>
-				<view class="time">
-					<text>04-30</text>
-				</view>
-			</view>
-			<view class="dot">
-				<text class="cuIcon-title text-yellow"></text>
+		<block wx:for="{{dotList}}" wx:key="index">
+					<view class="item" id="{{item.dotId}}" data-commentid="{{item.commentId}}" bindtap="handleViewComment">
+						<view class="avatar">
+							<image src="{{item.avatar}}"></image>
+						</view>
+						<view class="content">
+							<view class="user">
+								<text class="user-name">{{item.useName}}</text>
+								<text class="replay">点赞了你的评论</text>
+							</view>
+							<view class="time">
+								<text>{{item.create_time}}</text>
+							</view>
+						</view>
+						<view class="dot" wx:if="{{!item.ifView}}">
+							<text class="cuIcon-title text-yellow"></text>
+						</view>
+					</view>
+		</block>
+		<view wx:if="{{commentList.length === 0}}">
+			<view class="item">
+				<text class="no-msg">暂时没有收到点赞哦</text>
 			</view>
 		</view>
 	</block>
