--- a/miniprogram/pages/questionBank/answerInterviewQuestion/answerInterviewQuestion.wxss
+++ b/miniprogram/pages/questionBank/answerInterviewQuestion/answerInterviewQuestion.wxss
@@ -1,13 +1,5 @@
-
 page {
   background-color: rgba(255, 255, 255, 1);
-}
-.menu {
-  width: 64rpx;
-  height: 64rpx;
-  font-size: 62rpx;
-  float: right;
-  line-height: 62rpx;
 }
 .bank-wrap {
   background: white;
@@ -17,19 +9,12 @@ page {
   padding-top: 42rpx;
   color: rgba(16, 16, 16, 1);
   font-size: 50rpx;
-  height: 10vh;
   text-align: left;
   font-family: PingFangSC-regular;
-}
-.score-time {
-  display: inline-block;
-  margin-left: 34rpx;
-  height: 40rpx;
-  color: rgba(16, 16, 16, 1);
-  font-size: 28rpx;
-  text-align: left;
-  font-family: PingFangSC-regular;
-  margin-bottom: 30rpx;
+  width: 80vw;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .line {
   width: 750rpx;
@@ -38,228 +23,18 @@ page {
 .bank {
   margin-left: 34rpx;
   padding-top: 45rpx;
-  min-height: 61vh;
-  max-height: 61vh;
+  height: 64vh;
   overflow: auto;
 }
-.correct-analyse {
-  margin-top: 30rpx;
-  color: rgba(16, 16, 16, 1);
-  font-size: 36rpx;
-  text-align: left;
-  font-family: PingFangSC-regular;
+.type-btns {
+  top: 8vh;
 }
-.comments {
-  padding: 30rpx;
+.score-time {
+  margin-bottom: 30rpx;
+  margin-top: 0;
 }
-.comment {
-  position: relative;
-}
-.comment .user {
-  display: flex;
-  justify-content: space-between;
-}
-.like-dot, .user-info {
-  display: flex;
-}
-.user-info .user-name {
-  margin-left: 10rpx;
-}
-.like-dot {
-  margin-right: 20rpx;
-}
-
-.comment .mine {
-  width: 40rpx;
-  height: 40rpx;
-}
-.comment .like {
-  width: 40rpx;
-  height: 40rpx;
-}
-.comment .content {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-  padding: 20rpx;
-  text-overflow: ellipsis;
-  height: 100rpx;
-  overflow: hidden;
-  color: rgba(16, 16, 16, 1);
-  font-size: 32rpx;
-  text-align: left;
-  font-family: PingFangSC-regular;
-}
-.view-all {
-  height: 60rpx;
-  color: rgba(163, 163, 163, 1);
-  font-size: 28rpx;
-  text-align: center;
-  font-family: PingFangSC-regular;
-  text-decoration: underline;
-  margin-top: 10rpx;
-}
-.publish {
-  position: relative;
-}
-.publish input {
-  position: absolute;
-  left: 19rpx;
-  padding-right: 177rpx;
-  padding-left: 1em;
-  width: 658rpx;
-  height: 76rpx;
-  color: rgba(136, 136, 136, 1);
-  font-size: 28rpx;
-  text-align: left;
-  font-family: PingFang SC;
-  border: 2rpx solid rgba(187, 187, 187, 1);
-}
-.publish .publish-comment {
-  position: absolute;
-  left: 517rpx;
-  top: 6rpx;
-  width: 150rpx;
-  height: 62rpx;
-  border-radius: 10rpx;
-  background-color: rgba(255, 255, 255, 1);
-  color: rgba(163, 163, 163, 1);
-  font-size: 36rpx;
-  text-align: center;
-  font-family: PingFang SC;
-  border: 4rpx solid rgba(163, 163, 163, 1);
-}
-
-
-/* .chekckout-question {
-  width: 164rpx;
-  height: 72rpx;
-  border-radius: 20rpx;
-  background-color: rgba(250, 191, 1, 1);
-  color: rgba(16, 16, 16, 1);
-  font-size: 36rpx;
-  text-align: center;
-  font-family: PingFang SC;
-  border: 4rpx solid rgba(0, 0, 0, 1);
-  line-height: 72rpx;
-} */
-.chekckout-question {
-  width: 164rpx;
-  height: 72rpx;
-  border-radius: 20rpx;
-  background-color: rgba(250, 191, 1, 1);
-  color: rgba(16, 16, 16, 1);
-  font-size: 36rpx;
-  text-align: center;
-  font-family: PingFang SC;
-  border: 4rpx solid rgba(0, 0, 0, 1);
-  line-height: 72rpx;
-}
-.next-size {
-  position: absolute;
-  background: white;
-  bottom: 0;
-  bottom: 4vh;
-  width: 100%;
-  z-index: -1;
-}
-.next-question {
-  float: right;
-  margin-right: 40rpx;
+.next-question, .pre-question {
   margin-top: 20rpx;
 }
-.pre-question {
-  float: left;
-  margin-left: 40rpx;
-  margin-top: 20rpx;
-}
-.page-size {
-  margin: 0 auto;
-  width: 60rpx;
-  height: 40rpx;
-  color: rgba(16, 16, 16, 1);
-  font-size: 28rpx;
-  text-align: left;
-  font-family: PingFangSC-regular;
-  padding-top: 100rpx;
-}
-.view-answer {
-  width: 112rpx;
-  height: 40rpx;
-  color: rgba(139, 137, 129, 1);
-  font-size: 28rpx;
-  text-align: left;
-  font-family: PingFangSC-regular;
-  border-bottom: 2rpx solid rgba(187, 187, 187, 1);
-  margin-top: 18rpx;
-}
 
-/* .next-size {
-  position: relative;
-  background: white;
-  height: 200rpx;
-}
-.next-question {
-  float: right;
-  margin-right: 40rpx;
-}
-.pre-question {
-  float: left;
-  margin-left: 40rpx;
-}
-.page-size {
-  margin: 0 auto;
-  width: 60rpx;
-  height: 40rpx;
-  color: rgba(16, 16, 16, 1);
-  font-size: 28rpx;
-  text-align: left;
-  font-family: PingFangSC-regular;
-  padding-top: 100rpx;
-} */
 
-.cu-btn {
-  position: relative;
-  left: -24%;
-}
-.question-index-wrap {
-  display: flex;
-  padding: 80rpx;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  background: white;
-}
-.cu-dialog {
-  border-radius: 11px;
-  box-shadow: 0px 1px 4px 0px rgba(250, 191, 1, 0.47);
-  border: 2px solid rgba(250, 191, 1, 1);
-}
-.question-index-wrap .question-index {
-  width: 72rpx;
-  height: 72rpx;
-  line-height: 72rpx;
-  background-color: rgba(255, 255, 255, 0);
-  font-size: 36rpx;
-  text-align: center;
-  font-family: -apple-system;
-  border-radius: 50% 50%;
-  margin: 10rpx;
-  border: 2rpx solid black;
-}
-.question-index-wrap .correct {
-  border: 2rpx solid rgba(250, 191, 1, 1);
-  color: rgba(250, 191, 1, 1);
-}
-.no-comments {
-  text-align: center;
-}
-/* .view-answer {
-  width: 112rpx;
-  height: 40rpx;
-  color: rgba(139, 137, 129, 1);
-  font-size: 28rpx;
-  text-align: left;
-  font-family: PingFangSC-regular;
-  border-bottom: 2rpx solid rgba(187, 187, 187, 1);
-  margin-top: 18rpx;
-} */
