--- a/miniprogram/pages/questionBank/viewQuestions/viewQuestions.wxml
+++ b/miniprogram/pages/questionBank/viewQuestions/viewQuestions.wxml
@@ -35,15 +35,13 @@
 	<view class="bank-wrap">
 		<view class="bank-title">
 			<text>{{bank.title}} </text>
+		</view>
+				<view class="type-btns">
 			<text bindtap="handleCollection" class="cuIcon-favorfill text-yellow lg cuIcon-{{ifCollect?'favorfill': 'favor'}}"></text>
-			<view class="menu" bindtap="handleMenu" data-target="Modal">
+				<view class="menu" bindtap="handleMenu" data-target="Modal">
 				<text class="cuIcon-apps lg text-yellow"></text>
 			</view>
 		</view>
-		<!-- <view class="score-time">
-			<text class="time">时间：{{bank.limit_time}}分钟</text>
-		</view> -->
-
 		<view class="cu-modal {{modalName=='Modal'?'show':''}}" bindtap="hideModal">
 			<view class="cu-dialog" catchtap>
 				<view class="cu-bar bg-white justify-end">
@@ -75,13 +73,14 @@
 			<block wx:if="{{bank.bank[questionIndex].type === '单选'}}">
 				<view class="radio-question">
 					<view class="quetion-title">
-						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【单选】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【单选】</text></text>
 					</view>
 					<radio-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
 						<label wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
-							<!-- <radio disabled checked="{{key === chooseValue[questionIndex]|| key === bank.bank[questionIndex].correct_answer[0]}}" class="{{bank.bank[questionIndex].mistaked&&(key === chooseValue[questionIndex] || key === bank.bank[questionIndex].correct_answer[0])?'red':'yellow'}} radio no-radio" wx:if="{{value}}" value="{{key}}"> -->
-							<radio disabled checked="{{key === chooseValue[questionIndex] || key === bank.bank[questionIndex].correct_answer[0]}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}} radio no-radio" wx:if="{{value}}" value="{{key}}">
+							<radio disabled checked="{{key === chooseValue[questionIndex]}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}} radio no-radio" wx:if="{{value}}" value="{{key}}">
 							</radio>
+							<!-- <radio disabled checked="{{key === chooseValue[questionIndex] || key === bank.bank[questionIndex].correct_answer[0]}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}} radio no-radio" wx:if="{{value}}" value="{{key}}">
+							</radio> -->
 							<text>{{value}}</text>
 						</label>
 					</radio-group>
@@ -95,11 +94,11 @@
 			<block wx:if="{{bank.bank[questionIndex].type === '多选'}}">
 				<view class="checkbox-question">
 					<view class="quetion-title">
-						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【多选】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【多选】</text></text>
 					</view>
 					<checkbox-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="checkboxChange" class="checkbox-group">
 						<label class="my-choosebox" wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
-							<checkbox disabled wx:if="{{value}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,chooseValue[questionIndex],bank.bank[questionIndex].correct_answer)}}">
+							<checkbox disabled wx:if="{{value}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,chooseValue[questionIndex])}}">
 							</checkbox>
 							<text>{{value}}</text>
 						</label>
@@ -113,11 +112,11 @@
 			<block wx:if="{{bank.bank[questionIndex].type === '不定项选'}}">
 				<view class="checkbox-question">
 					<view class="quetion-title">
-						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【不定项选】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【不定项选】</text></text>
 					</view>
 					<checkbox-group bindchange="checkboxChange" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" class="checkbox-group">
 						<label class="my-choosebox" wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
-							<checkbox disabled wx:if="{{value}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,chooseValue[questionIndex],bank.bank[questionIndex].correct_answer)}}">
+							<checkbox disabled wx:if="{{value}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,chooseValue[questionIndex])}}">
 							</checkbox>
 							<text>{{value}}</text>
 						</label>
@@ -132,11 +131,11 @@
 			<block wx:if="{{bank.bank[questionIndex].type === '判断'}}">
 				<view class="radio-question">
 					<view class="quetion-title">
-						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【判断】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【判断】</text></text>
 					</view>
 					<radio-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
 						<label wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
-							<radio disabled checked="{{key === chooseValue[questionIndex] || key === bank.bank[questionIndex].correct_answer[0]}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}} radio no-radio" wx:if="{{value}}" value="{{key}}">
+							<radio disabled checked="{{key === chooseValue[questionIndex]}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}} radio no-radio" wx:if="{{value}}" value="{{key}}">
 							</radio>
 							<text>{{value}}</text>
 						</label>
@@ -151,7 +150,7 @@
 			<block wx:if="{{bank.bank[questionIndex].type === '填空'}}">
 				<view class="blank-question">
 					<view class="quetion-title">
-						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【填空】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【填空】</text></text>
 					</view>
 
 					<view bindtap="handleTap" class="yourblank" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}">
@@ -166,7 +165,7 @@
 			<block wx:if="{{bank.bank[questionIndex].type === '排序'}}">
 				<view class="sort-question">
 					<view class="quetion-title">
-						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【排序】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【排序】</text></text>
 					</view>
 					<view wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
 						<block wx:if="{{value != ''}}">
@@ -196,7 +195,7 @@
 							<image class="mine" src="{{item.avatar}}"></image>
 							<view class="user-name">{{item.user_name}} </view>
 						</view>
-						<view class="like-dot" id="{{item.user_id}}" data-index="{{index}}" bindtap="handleLike">
+						<view class="like-dot" id="{{item.user_id}}" data-commentid="{{item.commentId}}" data-index="{{index}}" bindtap="handleLike">
 								<text class="like cuIcon-appreciatefill {{filter.isLike(item.user_id,item.spot_count)? 'text-yellow' : 'text-grey'}}"></text>
 							<view class="dot-num">{{item.spot_count.length}}</view>
 						</view>
@@ -204,10 +203,11 @@
 					<view class="content">{{item.content}}
 						<view class="replay" data-index="{{index}}" data-commentid="{{item.commentId}}" bindtap="handleReplay" >
 							<block wx:for="{{item.reply}}" wx:key="index">
-							<view class="replay-info" data-name="{{item.user_name}}" id="{{item.user_id}}">
-								<text data-name="{{item.user_name}}" id="{{item.user_id}}" class="replay-name">{{item.user_name}}: </text>
-								<text data-name="{{item.user_name}}" id="{{item.user_id}}" class="replay-content">{{item.content}} </text>
-							</view>
+								<view class="replay-info" data-name="{{item.user_name}}" id="{{item.user_id}}">
+								<image src="{{item.avatar}}"></image>
+									<text data-name="{{item.user_name}}" id="{{item.user_id}}" class="replay-name">{{item.user_name}}\n </text>
+									<text data-name="{{item.user_name}}" id="{{item.user_id}}" class="replay-content">{{item.content}} </text>
+								</view>
 							</block>
 						</view>
 					</view>
