--- a/miniprogram/pages/questionBank/viewQuestions/viewQuestions.wxss
+++ b/miniprogram/pages/questionBank/viewQuestions/viewQuestions.wxss
@@ -1,228 +1,58 @@
-/* miniprogram/pages/home/wrongAll/wrongAll.wxss */
 page {
   background: white;
 }
 scroll-view{
   background-color: rgba(255, 255, 255, 1);
 }
-.menu {
-  width: 64rpx;
-  height: 64rpx;
-  font-size: 62rpx;
-  float: right;
-  line-height: 62rpx;
-}
+
+
 .bank-wrap {
   background: white;
   padding-bottom: 8vh;
-}
-.bank-title {
-  margin-left: 34rpx;
-  height: 10vh;
-  color: rgba(16, 16, 16, 1);
-  font-size: 50rpx;
-  text-align: left;
-  font-family: PingFangSC-regular;
-}
-.score-time {
-  display: inline-block;
-  margin-left: 34rpx;
-  margin-top: 65rpx;
-  margin-bottom: 30rpx;
-  height: 40rpx;
-  color: rgba(16, 16, 16, 1);
-  font-size: 28rpx;
-  text-align: left;
-  font-family: PingFangSC-regular;
-}
-.line {
-  /* position: absolute; */
-  width: 750rpx;
-  border: 1rpx solid rgba(187, 187, 187, 1);
 }
 .bank {
   margin-left: 34rpx;
   padding-top: 45rpx;
   overflow: auto;
-  height: 50vh;
+  min-height: 50vh;
+  max-height: 60vh;
 }
-.radio-question,
-.checkbox-question,
-.blank-question,
-.sort-question {
-  display: flex;
-  flex-direction: column;
+.bank-title {
+  margin-left: 34rpx;
+  padding-top: 42rpx;
   color: rgba(16, 16, 16, 1);
-  font-size: 30rpx;
+  font-size: 50rpx;
   text-align: left;
   font-family: PingFangSC-regular;
-  margin-bottom: 15rpx;
+  width: 80vw;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
-.my-choosebox {
-  display: block;
-}
-.my-choosebox text {
-  margin-left: 20rpx;
-}
-
-.my-choosebox radio {
-  transform: scale(0.6);
-  border-radius: 50%;
-  border: 4rpx solid transparent;
-  background: transparent;
-}
-.my-choosebox .no-radio {
-  border: 4rpx solid rgba(250, 191, 1, 1);
-}
- .my-choosebox checkbox {
-  transform: scale(0.6);
-  border: 4rpx solid rgba(250, 191, 1, 1);
-  background: transparent;
-}
-.my-choosebox .no-checkbox {
-  border: 4rpx solid rgba(250, 191, 1, 1);
-}
-radio .wx-radio-input.wx-radio-input-disabled {
-  background: white;
-}
-checkbox .wx-checkbox-input.wx-checkbox-input-disabled {
-  background: white;
-}
-radio.red {
-  border: 4rpx solid red !important;
-}
-checkbox.red {
-  border: 4rpx solid red !important;
-}
-.yourblank {
-  font-size: 36rpx;
-  margin-top: 28rpx;
-  font-family: PingFangSC-regular;
-}
-.blank-question input, .sort-question input {
-  width: 690rpx;
-  height: 72rpx;
-  color: rgba(136, 136, 136, 1);
-  font-size: 28rpx;
-  text-align: left;
-  font-family: -apple-system;
+.line {
+  /* position: absolute; */
+  width: 750rpx;
   border: 1rpx solid rgba(187, 187, 187, 1);
-  padding-left: 1em;
-  margin-top: 10rpx;
 }
+.my-choosebox checkbox[checked] {
+  border: 4rpx solid transparent;
+  background: white;
+}
+.next-size {
+  z-index: 0;
+}
+  
 
-.correct-analyse {
+/* .correct-analyse {
   margin-top: 30rpx;
   color: rgba(16, 16, 16, 1);
   font-size: 36rpx;
   text-align: left;
   font-family: PingFangSC-regular;
-}
-.comments {
-  padding: 30rpx;
-  padding-bottom: 0;
-}
-.comment {
-  position: relative;
-}
-.comment .user {
-  display: flex;
-  justify-content: space-between;
-}
-.like-dot, .user-info {
-  display: flex;
-}
-.user-info .user-name {
-  margin-left: 26rpx;
-  line-height: 60rpx;
-}
-.like-dot {
-  margin-right: 20rpx;
-}
-.like-dot .dot-num {
-  line-height: 55rpx;
-}
+} */
 
-.comment .mine {
-  width: 60rpx;
-  height: 60rpx;
-  border-radius: 100%;
-}
-.comment .like {
-  font-size: 43rpx;
-  padding-right: 10rpx;
-}
-.comment .content {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  padding: 20rpx;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  color: rgba(16, 16, 16, 1);
-  font-size: 32rpx;
-  text-align: left;
-  font-family: PingFangSC-regular;
-  word-break: break-all;
-  color: #aaa;
-  padding-left: 83rpx;
-  padding-top: 0;
-}
-.comment .createtime {
-  padding-left: 83rpx;
-  color: #ccc;
-}
-
-.replay .replay-info {
-  padding-left: 20rpx;
-  padding-top: 30rpx;
-  font-size: 25rpx;
-}
-.replay .replay-info .replay-name {
-  color: rgba(16, 16, 16, 1);
-  font-family: SourceHanSansSC-regular;
-}
-
-.view-all {
-  height: 60rpx;
-  color: rgba(163, 163, 163, 1);
-  font-size: 28rpx;
-  text-align: center;
-  font-family: PingFangSC-regular;
-  text-decoration: underline;
-  margin-top: 10rpx;
-}
-.publish {
-  position: relative;
-}
-.publish input {
-  position: absolute;
-  left: 19rpx;
-  padding-right: 193rpx;
-  padding-left: 1em;
-  width: 688rpx;
-  height: 76rpx;
-  color: rgba(136, 136, 136, 1);
-  font-size: 28rpx;
-  text-align: left;
-  font-family: PingFang SC;
-  border: 2rpx solid rgba(187, 187, 187, 1);
-}
-.publish .publish-comment {
-  position: absolute;
-  left: 530rpx;
-  top: 6rpx;
-  width: 150rpx;
-  height: 62rpx;
-  border-radius: 10rpx;
-  background-color: rgba(255, 255, 255, 1);
-  color: rgba(163, 163, 163, 1);
-  font-size: 36rpx;
-  text-align: center;
-  font-family: PingFang SC;
-  border: 4rpx solid rgba(163, 163, 163, 1);
-}
-.next-size {
+/* .next-size {
   position: relative;
   background: white;
   height: 11vh
@@ -256,15 +86,15 @@ checkbox.red {
   text-align: left;
   font-family: PingFangSC-regular;
   padding-top: 100rpx;
-}
+} */
 
-.wrong-blank {
+/* .wrong-blank {
   color: red;
 }
 .correct-blank {
   color: yellow;
-}
-.cu-btn {
+} */
+/* .cu-btn {
   position: relative;
   left: -24%;
 }
@@ -304,4 +134,4 @@ checkbox.red {
 .question-index-wrap .wrong {
   border: 2rpx solid red;
   color: rgb(250, 1, 1);
-}
+} */
