--- a/miniprogram/style/bankComment.wxss
+++ b/miniprogram/style/bankComment.wxss
@@ -1,117 +1,19 @@
-page {
-  background-color: rgba(255, 255, 255, 1);
-}
-scroll-view{
-  background-color: rgba(255, 255, 255, 1);
+
+.type-btns {
+  position: absolute;
+  right: 27rpx;
+  font-size: 64rpx;
+  top: 12vh;
 }
 
-.bank-wrap {
-  background: white;
-  padding-bottom: 8vh;
-}
-.bank-title {
+.score-time {
   margin-left: 34rpx;
-  padding-top: 42rpx;
+  height: 40rpx;
   color: rgba(16, 16, 16, 1);
-  font-size: 50rpx;
-  text-align: left;
-  font-family: PingFangSC-regular;
-  width: 80vw;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-.line {
-  width: 750rpx;
-  border: 1rpx solid rgba(187, 187, 187, 1);
-}
-.bank {
-  margin-left: 34rpx;
-  padding-top: 45rpx;
-  min-height: 50vh;
-  max-height: 70vh;
-  overflow: auto;
-}
-.next-size {
-  z-index: 0;
-}
-/* .radio-question,
-.checkbox-question,
-.blank-question,
-.sort-question {
-  display: flex;
-  flex-direction: column;
-  color: rgba(16, 16, 16, 1);
-  font-size: 30rpx;
-  text-align: left;
-  font-family: PingFangSC-regular;
-  margin-bottom: 15rpx;
-}
-
-.my-choosebox {
-  display: block;
-}
-.my-choosebox text {
-  margin-left: 20rpx;
-}
-.my-choosebox radio {
-  transform: scale(0.6);
-  border-radius: 50%;
-  border: 4rpx solid transparent;
-  background: transparent;
-}
-.my-choosebox .no-radio {
-  border: 4rpx solid rgba(250, 191, 1, 1);
-
-} */
-.my-choosebox checkbox[checked] {
-  border: 4rpx solid transparent;
-  background: white;
-}
- /* .my-choosebox checkbox {
-  transform: scale(0.6);
-  border: 4rpx solid rgba(250, 191, 1, 1);
-  background: transparent;
-  border-radius: 10rpx 10rpx
-}
-
-checkbox .wx-checkbox-input {
-  border: none;
-}
-radio .wx-radio-input {
-  border: none;
-}
-radio .wx-radio-input.wx-radio-input-disabled {
-  background: white;
-}
-checkbox .wx-checkbox-input.wx-checkbox-input-disabled {
-  background: white;
-} */
-/* .my-choosebox .no-checkbox {
-  border: 4rpx solid rgba(250, 191, 1, 1);
-} */
-radio.red {
-  border: 4rpx solid red !important;
-}
-checkbox.red {
-  border: 4rpx solid red !important;
-}
-/* .yourblank {
-  font-size: 36rpx;
-  margin-top: 28rpx;
-  font-family: PingFangSC-regular;
-}
-.blank-question input, .sort-question input {
-  width: 690rpx;
-  height: 72rpx;
-  color: rgba(136, 136, 136, 1);
   font-size: 28rpx;
   text-align: left;
-  font-family: -apple-system;
-  border: 1rpx solid rgba(187, 187, 187, 1);
-  padding-left: 1em;
-  margin-top: 10rpx;
+  font-family: PingFangSC-regular;
+  margin-top: 28rpx;
 }
 
 .correct-analyse {
@@ -120,9 +22,9 @@ checkbox.red {
   font-size: 36rpx;
   text-align: left;
   font-family: PingFangSC-regular;
-} */
+}
 
-/* .comments {
+.comments {
   padding: 30rpx;
   padding-bottom: 0;
 }
@@ -232,10 +134,10 @@ checkbox.red {
   font-family: PingFang SC;
   border: 4rpx solid rgba(163, 163, 163, 1);
 }
+
 .next-size {
   position: relative;
-  background: white;
-  height: 11vh
+  z-index: 0;
 }
 .chekckout-question {
   width: 164rpx;
@@ -268,23 +170,9 @@ checkbox.red {
   padding-top: 100rpx;
 }
 
-.wrong-blank {
-  color: red;
-}
-.correct-blank {
-  color: rgba(250, 191, 1, 1);
-}
 .cu-btn {
   position: relative;
   left: -24%;
-}
-.question-index-wrap {
-  display: flex;
-  padding: 80rpx;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  background: white;
-  padding-top: 40rpx;
 }
 .cu-dialog {
   border-radius: 11px;
@@ -294,7 +182,13 @@ checkbox.red {
 .cu-dialog .cubar {
   padding-top: 30rpx;
 }
-
+.question-index-wrap {
+  display: flex;
+  padding: 80rpx;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background: white;
+}
 .question-index-wrap .question-index {
   width: 72rpx;
   height: 72rpx;
@@ -311,7 +205,102 @@ checkbox.red {
   border: 2rpx solid rgba(250, 191, 1, 1);
   color: rgba(250, 191, 1, 1);
 }
+
 .question-index-wrap .wrong {
   border: 2rpx solid red;
   color: rgb(250, 1, 1);
-} */
+}
+
+
+.no-comments {
+  text-align: center;
+}
+.view-answer {
+  width: 112rpx;
+  height: 40rpx;
+  color: rgba(139, 137, 129, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  border-bottom: 2rpx solid rgba(187, 187, 187, 1);
+  margin-top: 18rpx;
+}
+.wrong-blank {
+  color: red;
+}
+.correct-blank {
+  color: yellow;
+}
+.radio-question,
+.checkbox-question,
+.blank-question,
+.sort-question {
+  display: flex;
+  flex-direction: column;
+  color: rgba(16, 16, 16, 1);
+  font-size: 30rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  margin-bottom: 15rpx;
+}
+
+.my-choosebox {
+  display: block;
+}
+.my-choosebox text {
+  margin-left: 20rpx;
+}
+
+.my-choosebox radio {
+  transform: scale(0.6);
+  border-radius: 50%;
+  border: 4rpx solid transparent;
+  background: transparent;
+}
+.my-choosebox .no-radio {
+  border: 4rpx solid rgba(250, 191, 1, 1);
+}
+ .my-choosebox checkbox {
+  transform: scale(0.6);
+  border: 4rpx solid rgba(250, 191, 1, 1);
+  background: transparent;
+  border-radius: 10rpx 10rpx
+}
+.my-choosebox .no-checkbox {
+  border: 4rpx solid rgba(250, 191, 1, 1);
+}
+checkbox .wx-checkbox-input {
+  border: none;
+}
+radio .wx-radio-input {
+  border: none;
+}
+radio .wx-radio-input.wx-radio-input-disabled {
+  background: white;
+}
+
+checkbox .wx-checkbox-input.wx-checkbox-input-disabled {
+  background: white;
+}
+radio.red {
+  border: 4rpx solid red !important;
+}
+checkbox.red {
+  border: 4rpx solid red !important;
+}
+.yourblank {
+  font-size: 36rpx;
+  margin-top: 28rpx;
+  font-family: PingFangSC-regular;
+}
+.blank-question input, .sort-question input {
+  width: 690rpx;
+  height: 72rpx;
+  color: rgba(136, 136, 136, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: -apple-system;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+  padding-left: 1em;
+  margin-top: 10rpx;
+}
